Fixed the overflow-x for entire app

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,6 +2,7 @@
 
 * {
   box-sizing: border-box;
+  
 }
 
 :root {
@@ -20,4 +21,5 @@ body {
   padding: 0;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
